--- a/META.yml
+++ b/META.yml
@@ -4,7 +4,6 @@ author:
   - 'Toby Inkster <tobyink@cpan.org>'
 build_requires:
   ExtUtils::MakeMaker: 6.59
-  Test::More: 0.61
 configure_requires:
   ExtUtils::MakeMaker: 6.59
 distribution_type: module
@@ -23,11 +22,16 @@ no_index:
     - inc
     - t
     - xt
+recommends:
+  MooseX::ClassAttribute: 0
 requires:
+  Moo: 1.000000
+  Role::Tiny: 0
+  Sub::Exporter::Progressive: 0
   perl: 5.8.0
 resources:
   bugtracker: http://rt.cpan.org/Dist/Display.html?Queue=MooX-ClassAttribute
   homepage: https://metacpan.org/release/MooX-ClassAttribute
   license: http://dev.perl.org/licenses/
   repository: https://bitbucket.org/tobyink/p5-moox-classattribute
-version: 0.001
+version: 0.002
