--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -4,6 +4,9 @@
 	perl_version_from m`MooX::ClassAttribute`;
 	version_from      m`MooX::ClassAttribute`;
 	readme_from       m`MooX::ClassAttribute`;
-	test_requires     p`Test::More 0.61` ;
+	requires          p`Moo 1.000000`;
+	recommends        p`MooseX::ClassAttribute 0`;
+	requires          p`Role::Tiny 0`;
+	requires          p`Sub::Exporter::Progressive 0`;
 	.
 
