--- a/META.yml
+++ b/META.yml
@@ -33,5 +33,7 @@ resources:
   bugtracker: http://rt.cpan.org/Dist/Display.html?Queue=MooX-ClassAttribute
   homepage: https://metacpan.org/release/MooX-ClassAttribute
   license: http://dev.perl.org/licenses/
-  repository: https://bitbucket.org/tobyink/p5-moox-classattribute
-version: 0.006
+  repository: https://github.com/tobyink/p5-moox-classattribute
+version: 0.007
+x_contributors:
+  - 'Dinis Rebolo <drebolo@cpan.org>'
