--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,12 @@
 ---
 abstract: 'declare class attributes Moose-style... but without Moose'
 author:
-  - 'Toby Inkster <tobyink@cpan.org>'
+  - 'Toby Inkster (TOBYINK) <tobyink@cpan.org>'
 build_requires: {}
 configure_requires:
   ExtUtils::MakeMaker: 6.17
 dynamic_config: 0
-generated_by: 'Dist::Inkt::Profile::TOBYINK version 0.004, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Inkt::Profile::TOBYINK version 0.007, CPAN::Meta::Converter version 2.120921'
 keywords: []
 license: unknown
 meta-spec:
@@ -23,28 +23,28 @@ no_index:
 provides:
   Method::Generate::ClassAccessor:
     file: lib/Method/Generate/ClassAccessor.pm
-    version: 0.008
+    version: 0.009
   MooX::CaptainHook:
     file: lib/MooX/CaptainHook.pm
-    version: 0.008
+    version: 0.009
   MooX::CaptainHook::HandleMoose::Hack:
     file: lib/MooX/CaptainHook.pm
-    version: 0.008
+    version: 0.009
   MooX::CaptainHook::OnApplication:
     file: lib/MooX/CaptainHook.pm
-    version: 0.008
+    version: 0.009
   MooX::CaptainHook::OnApplication::Moose:
     file: lib/MooX/CaptainHook.pm
-    version: 0.008
+    version: 0.009
   MooX::CaptainHook::OnInflation:
     file: lib/MooX/CaptainHook.pm
-    version: 0.008
+    version: 0.009
   MooX::ClassAttribute:
     file: lib/MooX/ClassAttribute.pm
-    version: 0.008
+    version: 0.009
   MooX::ClassAttribute::HandleMoose:
     file: lib/MooX/ClassAttribute/HandleMoose.pm
-    version: 0.008
+    version: 0.009
 recommends:
   MooseX::ClassAttribute: 0
 requires:
@@ -52,11 +52,12 @@ requires:
   Role::Tiny: 1.000000
   Sub::Exporter::Progressive: 0
 resources:
+  X_identifier: http://purl.org/NET/cpan-uri/dist/MooX-ClassAttribute/project
   bugtracker: http://rt.cpan.org/Dist/Display.html?Queue=MooX-ClassAttribute
   homepage: https://metacpan.org/release/MooX-ClassAttribute
   license: http://dev.perl.org/licenses/
   repository: https://github.com/tobyink/p5-moox-classattribute
-version: 0.008
+version: 0.009
 x_contributors:
-  - 'Dinis Rebolo <drebolo@cpan.org>'
+  - 'Dinis Rebolo (DREBOLO) <drebolo@cpan.org>'
 x_provides_scripts: {}
