--- a/META.yml
+++ b/META.yml
@@ -4,17 +4,17 @@ author:
   - 'Toby Inkster (TOBYINK) <tobyink@cpan.org>'
 build_requires: {}
 configure_requires:
-  CPAN::Meta::Requirements: 2.000
-  ExtUtils::MakeMaker: 6.17
+  ExtUtils::MakeMaker: '6.17'
 conflicts:
   Moo: '== 1.001000'
+  MooseX::ClassAttribute: '<= 0.26'
 dynamic_config: 0
-generated_by: 'Dist::Inkt::Profile::TOBYINK version 0.009, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Inkt::Profile::TOBYINK version 0.023, CPAN::Meta::Converter version 2.142690'
 keywords: []
-license: unknown
+license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: MooX-ClassAttribute
 no_index:
   directory:
@@ -23,43 +23,46 @@ no_index:
     - inc
     - t
     - xt
+optional_features: {}
 provides:
   Method::Generate::ClassAccessor:
     file: lib/Method/Generate/ClassAccessor.pm
-    version: 0.010
+    version: '0.011'
   MooX::CaptainHook:
     file: lib/MooX/CaptainHook.pm
-    version: 0.010
+    version: '0.011'
   MooX::CaptainHook::HandleMoose::Hack:
     file: lib/MooX/CaptainHook.pm
-    version: 0.010
+    version: '0.011'
   MooX::CaptainHook::OnApplication:
     file: lib/MooX/CaptainHook.pm
-    version: 0.010
+    version: '0.011'
   MooX::CaptainHook::OnApplication::Moose:
     file: lib/MooX/CaptainHook.pm
-    version: 0.010
+    version: '0.011'
   MooX::CaptainHook::OnInflation:
     file: lib/MooX/CaptainHook.pm
-    version: 0.010
+    version: '0.011'
   MooX::ClassAttribute:
     file: lib/MooX/ClassAttribute.pm
-    version: 0.010
+    version: '0.011'
   MooX::ClassAttribute::HandleMoose:
     file: lib/MooX/ClassAttribute/HandleMoose.pm
-    version: 0.010
-recommends:
-  MooseX::ClassAttribute: 0
+    version: '0.011'
 requires:
-  Moo: 1.000000
-  Role::Tiny: 1.000000
-  Sub::Exporter::Progressive: 0
+  Exporter::Shiny: '0'
+  Moo: '1.000000'
+  Role::Tiny: '1.000000'
+  perl: '5.008000'
 resources:
-  X_identifier: http://purl.org/NET/cpan-uri/dist/MooX-ClassAttribute/project
+  Identifier: http://purl.org/NET/cpan-uri/dist/MooX-ClassAttribute/project
   bugtracker: http://rt.cpan.org/Dist/Display.html?Queue=MooX-ClassAttribute
   homepage: https://metacpan.org/release/MooX-ClassAttribute
   license: http://dev.perl.org/licenses/
-  repository: https://github.com/tobyink/p5-moox-classattribute
-version: 0.010
+  repository: git://github.com/tobyink/p5-moox-classattribute.git
+version: '0.011'
+x_breaks:
+  Moo: '== 1.001000'
+  MooseX::ClassAttribute: '<= 0.26'
 x_contributors:
   - 'Dinis Rebolo (DREBOLO) <drebolo@cpan.org>'
